Add module access flags for XStream serialization in Java 9+