@@ -87,6 +87,14 @@ public class WriteDependencies {
         cmdLine.add("-Djava.awt.headless=true");
         cmdLine.add("-Dlogback.configurationFile=" + LoggingUtils.getLogbackFileName());
         cmdLine.add("-Djava.library.path=lib");
+        // Add module access flags needed for XStream serialization (Java 9+)
+        cmdLine.add("--add-opens");
+        cmdLine.add("java.base/java.util=ALL-UNNAMED");
+        cmdLine.add("--add-opens");
+        cmdLine.add("java.base/java.lang=ALL-UNNAMED");
+        // Add module access flags needed for VirtualNetwork (Java 9+)
+        cmdLine.add("--add-opens");
+        cmdLine.add("java.base/java.net=ALL-UNNAMED");
         cmdLine.add("-DCP=" + cp);
         // cmdLine.add("-Dminimize_values=true");
 
